Bug 521713 - Regression in Plasma 6.7.0: cannot drag desktop icons/files between monitors on Wayland
Summary: Regression in Plasma 6.7.0: cannot drag desktop icons/files between monitors ...
Status: CLOSED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.7.0
Platform: Fedora RPMs Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: multiscreen, regression
: 522046 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-06-19 01:30 UTC by rustysol
Modified: 2026-07-08 03:13 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rustysol 2026-06-19 01:30:38 UTC
After upgrading from Plasma 6.6 to 6.7.0 on Fedora 44 Wayland, I can no longer drag desktop files/icons between monitors.

Dragging icons within the same screen works.
Dragging icons from one desktop screen to another fails: the icon snaps back or remains on the original screen.
Both screens are set to Folder View.
Resetting the secondary screen layout from Desktop to Folder View restored the existing icon positions on the secondary screen, but cross-monitor drag-and-drop still does not work.

When I start dragging a desktop icon, plasmashell logs:
cannot grab mouse: no event is currently being delivered
This message appears at drag start, not at mouse release.

System:
Operating System: Fedora Linux 44
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.12-201.fc44.x86_64
Graphics Platform: Wayland
GPU 1: Intel UHD Graphics
GPU 2: NVIDIA GeForce RTX 3070 Laptop GPU
Comment 1 purelonewolf 2026-06-20 17:57:09 UTC
Experiencing the same on CachyOS

Operating System: CachyOS Linux 
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.1.1-2-cachyos (64-bit)
Graphics Platform: Wayland
Graphics Processor 1: NVIDIA GeForce RTX 3080 Ti
Graphics Processor 2: AMD Ryzen 9 9950X3D 16-Core Processor
Comment 2 Antti Savolainen 2026-06-20 18:00:00 UTC
Can confirm. Seems to be that I can create a file only on one screen.

Operating System: Arch Linux 
KDE Plasma Version: 6.7.80
KDE Frameworks Version: 6.28.0
Qt Version: 6.12.0
Kernel Version: 7.0.12-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 2600 Six-Core Processor
Memory: 64 GiB of RAM (62.7 GiB usable)
Graphics Processor: AMD Radeon RX 5700
Comment 3 hekran 2026-06-24 13:34:17 UTC
Same issue on CachyOS.

Besides not being able to reliably move desktop icons between monitors, I found an additional problem:

If I create a new folder on the secondary monitor and immediately rename it, the folder jumps to the primary monitor. After that, I cannot drag it back to the secondary monitor. This behavior is reproducible every time on my system.

Operating System: CachyOS Linux 
KDE Plasma Version: 6.7.1
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.1.1-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9700X 8-Core Processor
Memory: 32 GB of RAM (30.5 GB usable)
Graphics Processor 1: NVIDIA GeForce RTX 5070 Ti
Graphics Processor 2: AMD Ryzen 7 9700X 8-Core Processor
Comment 4 roamingfox 2026-06-24 15:26:01 UTC
Same issue. Moving icons in folder view on the dekstop works fine within one monitor, but attempting to drag across monitors results in the icon snapping back to its original position.

Operating System: Fedora Linux 44
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.12-201.fc44.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9800X3D 8-Core Processor
Memory: 32 GiB of RAM (30.5 GiB usable)
Graphics Processor 1: NVIDIA GeForce RTX 4070
Graphics Processor 2: AMD Ryzen 7 9800X3D 8-Core Processor
Comment 5 kocandrlev 2026-06-26 14:33:14 UTC
Same issue. Also, when any file is renamed, it jumps to the primary monitor and cannot be moved back.

Operating System: Fedora Linux 44
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.12-201.fc44.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700X 8-Core Processor
Memory: 32 GiB of RAM (31,3 GiB usable)
Graphics Processor: AMD Radeon RX 6700 XT
Comment 6 Nate Graham 2026-06-28 19:54:02 UTC
*** Bug 522046 has been marked as a duplicate of this bug. ***
Comment 7 Marco Martin 2026-06-29 07:54:19 UTC
can reproduce
Comment 8 Bug Janitor Service 2026-06-29 11:54:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3853
Comment 9 Sylens 2026-06-29 13:51:45 UTC
i can also reproduce this!

Operating System: Garuda Linux 
KDE Plasma Version: 6.7.1
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.14-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6500 CPU @ 3.20GHz
Memory: 16 GiB of RAM (15.6 GiB usable)
Graphics Processor: NVIDIA GeForce GTX 1050 Ti
Manufacturer: MSI
Product Name: MS-7972
System Version: 2.0

yet another proof of why wayland sucks and of why xlibre is more reliable...
Comment 10 Marco Martin 2026-06-29 15:09:37 UTC
Git commit 22788f4199858cea26a6424c6f62c6d858e91f3d by Marco Martin.
Committed on 29/06/2026 at 15:01.
Pushed by mart into branch 'master'.

FolderView: More robust drop url generation

In order to generate a correct url as the dropUrl pass the mappedUrl
(with the local part removed) as path for the base url

M  +4    -3    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/22788f4199858cea26a6424c6f62c6d858e91f3d
Comment 11 Marco Martin 2026-06-29 15:15:20 UTC
Git commit 6e8368620e771383b82cc497c4fff1dc9f1c4c73 by Marco Martin.
Committed on 29/06/2026 at 15:09.
Pushed by mart into branch 'Plasma/6.7'.

FolderView: More robust drop url generation

In order to generate a correct url as the dropUrl pass the mappedUrl
(with the local part removed) as path for the base url


(cherry picked from commit 22788f4199858cea26a6424c6f62c6d858e91f3d)

22788f41 FolderView: More robust drop url generation

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +4    -3    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/6e8368620e771383b82cc497c4fff1dc9f1c4c73
Comment 12 purelonewolf 2026-07-01 06:47:22 UTC
Confirmed as resolved for me this morning on CachyOS - Thank you :-)
Comment 13 Mateusz Słowiński 2026-07-04 19:17:16 UTC
if its fixed, then why its still happening to me on plasma 6.7.1?
Comment 14 cwo 2026-07-05 11:22:23 UTC
(In reply to Mateusz Słowiński from comment #13)
> if its fixed, then why its still happening to me on plasma 6.7.1?

Because the fix is in Plasma 6.7.2. As you can see from the "Version Fixed/Implemented In" on top of the bug report.
Comment 15 SCS 2026-07-07 15:38:46 UTC
Updated to KDE Plasma 6.7.2 today and it only partially fixed the issue.  So far I've found that if the file name has a #, ?, or % in it, you can not move it to the other monitor.  If you create a desktop shortcut for this very bug report page, you can not move it to another monitor because it has a ? in the shortcut name that gets created.

OS: Fedora 44
Graphics Platform: Wayland
Comment 16 Nate Graham 2026-07-08 03:13:50 UTC
Can you open a new bug report for that and mention it here?