FolderView: More robust drop url generation

In order to generate a correct url as the dropUrl pass the mappedUrl
(with the local part removed) as path for the base url

BUG:521713